--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Starter</title>
+  <title>Berap Backoffice</title>
   <base href="/">
 
   <!-- Theme -->
